# VOS

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  activeButton.js  archive.php  beatmap-insert.txt  buttonFucntion.js  deploy.sh  docker-compose.env-dev  docker-compose.env-prod  docker-compose.env-stage  docker-compose.yaml  global_style.css  home.php  index.php  login.php  navbar.html  navigation-bar-style.css  navigation-bar.css  navigation-bar.html  navigation_bar.html  shutdown.sh  song.php  staff.php  style.css
Test/: index.html
Test/Navigation bar test/: style.css
Test/NavigationBar/SideBar/: index.html  style.css
Test/Table of content test/: index.html  style.css
app/public/: index.php
cpp/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cpp/includes/: chatbot.hpp
cpp/sources/: chatbot.cpp
css/: home.css  main.css  navigation-bar.css  reset.css  style.css
data/: beatmap.json  deleted_beatmap.json  staff.json
doc/: SETUP.md  example.Dockerfile  example.conf  example.env  example.yaml
js/: activeButton.js
layouts/: configuration.php  navigation_bar.php
modules/authentication/: token_callback.php
modules/convertion/: time_convertion.php
nginx/conf.d/: default.conf
oauth/: display_user.php  navigation_bar.php  token_callback.php
pages/: archive.php  home.php  index.php  logout.php  mappool.php  song.php  staff.php  vot.php
public/: .gitignore  TODO.md  composer.json
public/oauth/: navigation_bar.php  token_callback.php
public/pages/: staff.php
src/private/Configurations/: Database.php  InternetProtocol.php  PrettyArray.php  TimeZone.php
src/private/Controllers/: ArchiveController.php  AuthoriseController.php  CallbackController.php  Controller.php  EntryController.php  HomeController.php  LogInController.php  (+11 more)
src/public/: index.php
(+130 files in other folders)
